# dvd-weather-data-ingestion

./: .env.example  .gitignore  README.md  pyproject.toml
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: weather_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  station_location_expectations.json
notebooks/: 1-create-database.ipynb  1-load-data-to-parquet.ipynb  1-load-raw-geodata.ipynb  2-load-raw-meta-data.ipynb  2-load-to-db.ipynb  3-load-raw-data.ipynb  4-unzip-data.ipynb  4-unzipp-data.ipynb  5-load-data-to-parquet.ipynb  6-load-to-db.ipynb  7-data-access.ipynb  8-web-data-access.ipynb  9-check-data-quality.ipynb
src/: models.py
src/file_wrapper/: geo_data.py  meta_data.py  mixins.py  weather_data.py
